OLMIS-4289: added batch fetch for stock cards
