# src/main/resources/api-definition.yaml
@@ -49,6 +49,7 @@ schemas:
   - stockEventLineItemDto: !include schemas/stockEventLineItemDto.json
 
   - stockCard: !include schemas/stockCard.json
+  - stockCardPage: !include schemas/stockCard.json
   - stockCardSummariesPage: !include schemas/stockCardSummaryV2Page.json
   - stockCardSummaries: !include schemas/stockCardSummaries.json
   - validSourceDestination: !include schemas/validSourceDestination.json
@@ -136,35 +137,42 @@ resourceTypes:
 
 traits:
     - secured:
-          queryParameters:
-              access_token:
-                  displayName: access_token
-                  description: OAuth2 access token
-                  type: string
-                  required: false
-                  repeat: false
-          headers:
-              Authorization:
-                  displayName: Authorization
-                  description: OAuth2 authorization token header. Takes the form of 'Bearer <token>'.
-                  type: string
-                  required: false
-                  repeat: false
+        queryParameters:
+            access_token:
+                displayName: access_token
+                description: OAuth2 access token
+                type: string
+                required: false
+                repeat: false
+        headers:
+            Authorization:
+                displayName: Authorization
+                description: OAuth2 authorization token header. Takes the form of 'Bearer <token>'.
+                type: string
+                required: false
+                repeat: false
 
 
 
     - paginated:
-          queryParameters:
-              page:
-                  description: The page number which should be displayed. Note that the first page is numbered zero rather than one. Additionally, negative and undefined valued are interpreted as zero.
-                  type: integer
-                  required: false
-                  repeat: false
-              size:
-                  description: The desired size of each page. This specifies the maximum number of values that should be returned by the server. Zero, undefined, and negative values should result in all possible values being returned.
-                  type: integer
-                  required: false
-                  repeat: false
+        queryParameters:
+            page:
+                description: The page number which should be displayed. Note that the first page is numbered zero rather than one. Additionally, negative and undefined valued are interpreted as zero.
+                type: integer
+                required: false
+                repeat: false
+            size:
+                description: The desired size of each page. This specifies the maximum number of values that should be returned by the server. Zero, undefined, and negative values should result in all possible values being returned.
+                type: integer
+                required: false
+                repeat: false
+    - sorted:
+        queryParameters:
+            sort:
+                description: Sorting criteria in the format "property(,asc|desc)". Default sort order is ascending. Multiple sort criteria are supported.
+                type: string
+                required: false
+                repeat: true
 
 /api:
 
@@ -368,48 +376,63 @@ traits:
               application/json:
                 schema: localizedMessage
 
-  /stockCards/{id}:
+  /stockCards:
       get:
-        is: [ secured ]
-        description: Get full details of one stock card.
-
-        responses:
-          200:
-            body:
-              application/json:
-                schema: stockCard
-
-          404:
-            description: Stock card with given id does not exist.
-            body:
-              application/json:
-                schema: localizedMessage
-
-          403:
-            description: User does not have permission to view stock card.
-            body:
-              application/json:
-                schema: localizedMessage
-
-      /print:
-        get:
-          is: [ secured ]
-          description: Get stock card report in PDF format to print.
+          is: [ secured, paginated, sorted ]
+          description: Search Stock Cards
+          queryParameters:
+              id:
+                  required: false
+                  description: Stock Card Id
+                  repeat: true
+                  type: string
           responses:
-            200:
-              body:
-                application/pdf:
+              200:
+                  body:
+                      application/json:
+                          schema: stockCardPage
+      /{id}:
+          get:
+            is: [ secured ]
+            description: Get full details of one stock card.
 
-            403:
-              description: User does not have permission to get stock card report.
-              body:
-                application/json:
-                  schema: localizedMessage
+            responses:
+              200:
+                body:
+                  application/json:
+                    schema: stockCard
 
-            404:
-              description: Stock card with given id does not exist, can not get report.
-              body:
-                application/json:
+              404:
+                description: Stock card with given id does not exist.
+                body:
+                  application/json:
+                    schema: localizedMessage
+
+              403:
+                description: User does not have permission to view stock card.
+                body:
+                  application/json:
+                    schema: localizedMessage
+
+          /print:
+            get:
+              is: [ secured ]
+              description: Get stock card report in PDF format to print.
+              responses:
+                200:
+                  body:
+                    application/pdf:
+
+                403:
+                  description: User does not have permission to get stock card report.
+                  body:
+                    application/json:
+                      schema: localizedMessage
+
+                404:
+                  description: Stock card with given id does not exist, can not get report.
+                  body:
+                    application/json:
 
   /validDestinations:
       get:
